--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -8,15 +8,15 @@
             <div class="row blue-grey darken-2 white-text center-align">
                 <div ng-hide="addEventTitle">
                     <div class="col s1">    
-                        <h5><i class="fa fa-pencil-square-o  fa-2x"></i></h5>
+                        <h5><i class="fa fa-pencil-square-o"></i></h5>
                     </div>
                     <div class="col s11">
                         <h5>{{'updateEvent.title' | translate }}</h5>
                     </div>
                 </div>
                 <div ng-show="addEventTitle">
-                    <div class="col s1 red-text text-lighten-1">    
-                        <i class="fa fa-plus-square-o fa-2x"></i>
+                    <div class="col s1">    
+                        <h5><i class="fa fa-plus-square-o"></i></h5>
                     </div>
                     <div class="col s11">
                         <h5>{{'addEvent.title' | translate }}</h5>
