--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -1,27 +1,33 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"><div class="col s12"></div></div>   
-
-    <!-- action bar -->
-    <div class="row">
-        <div ng-hide="addEffectiveTitle">
-            <div class="col s1">    
-                <i class="fa fa-pencil-square-o fa-3x red-text text-lighten-1"></i>
-            </div>
-            <div class="col s11">
-                <h5 class="light-green-text text-lighten-1">{{'updateEffective.title' | translate }}</h5>
-            </div>
-        </div>
-        <div ng-show="addEffectiveTitle">
-            <div class="col s1">    
-                <i class="fa fa-plus-square-o fa-3x red-text text-lighten-1"></i>
-            </div>
-            <div class="col s11">
-                <h5 class="light-green-text text-lighten-1">{{'addEffective.title' | translate }}</h5>
-            </div>
-        </div>
+    <div class="row"></div>
     
-        <form novalidate name="effectiveCaracterSection">
+    <!-- Entete -->
+    <div class="row">
+        <div class="col s12">
+            <div class="row blue-grey darken-2 white-text center-align">
+                <div ng-hide="addEffectiveTitle">
+                    <div class="col s1">    
+                        <h5><i class="fa fa-pencil-square-o"></i></h5>
+                    </div>
+                    <div class="col s11">
+                        <h5>{{'updateEffective.title' | translate }}</h5>
+                    </div>
+                </div>
+                <div ng-show="addEffectiveTitle">
+                    <div class="col s1">    
+                        <h5><i class="fa fa-plus-square-o"></i></h5>
+                    </div>
+                    <div class="col s11">
+                        <h5>{{'addEffective.title' | translate }}</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <form name="effectiveCaracterSection" ng-submit="writeEffective()">
             
             <div class="row">
                 <div class="col s12">
@@ -30,16 +36,23 @@
                         <label for="effectiveLabel">{{'effectiveLabels.effectiveLabel' | translate }} <span class="red-text text-lighten-1">*</span></label>
                     </div>
                     <div class="input-field col m4 s6">
-                      <input ng-model="effective.label" id="effectiveLabel" type="text" class="validate left-align" required>
+                      <input ng-model="effective.label" name="effectiveLabel" type="text" class="validate left-align" 
+                             required
+                             ng-class="{ 'has-error' : effectiveCaracterSection.effectiveLabel.$invalid && !effectiveCaracterSection.effectiveLabel.$pristine }">
+                        <span class="small red-text text-lighten-1"
+                                    ng-show="effectiveCaracterSection.effectiveLabel.$invalid && !effectiveCaracterSection.effectiveLabel.$pristine" translate="effectiveErrors.Label"></span>
                     </div>
 
                     <div class="input-field col m2 s6">
                         <label for="effectiveCategoryAge">{{'effectiveLabels.effectiveCategoryAge' | translate }} <span class="red-text text-lighten-1">*</span></label>
                     </div>
                     <div class="input-field col m4 s6">
-                        <select class="browser-default" ng-model="effective.categoryAge.code" required id="effectiveCategoryAge"
+                        <select class="browser-default" ng-model="effective.categoryAge.code" name="effectiveCategoryAge"
+                                required ng-class="{ 'has-error' : effectiveCaracterSection.effectiveCategoryAge.$invalid && !effectiveCaracterSection.effectiveCategoryAge.$pristine }" 
                                 ng-options="p.code as p.label for p in listCategory">
                         </select>
+                        <span class="small red-text text-lighten-1"
+                                ng-show="effectiveCaracterSection.effectiveCategoryAge.$invalid && !effectiveCaracterSection.effectiveCategoryAge.$pristine" translate="effectiveErrors.CategoryAge"></span>
                     </div>
                 </div>
             </div>
@@ -61,10 +74,9 @@
                             </li>
                         </ul>
                     </div>
-                    
-                    
+                          
                     <div class="col s12">
-                        <table class="hoverable bordered">
+                        <table class="bordered">
                             <body>
                                 <tr ng-repeat="player in persons | filter:query"
                                     selection-model
@@ -73,7 +85,7 @@
                                     selection-model-selected-attribute="checked"
                                     selection-model-selected-items="selectedPlayers"
                                     selection-model-on-change="changed(player)"
-                                    class="col m4 s12">
+                                    class="col m3 s12">
                                     <td><simple-avatar person="player" width="'40px'" link="('#/private/viewPlayer/' + player._id)"></simple-avatar></td>
                                     <td>                                    
                                         <input type="checkbox" id="{{$index + 1}}"/> 
@@ -89,13 +101,9 @@
             
             <!-- actions buttons -->
             <div class="row">&nbsp;</div>
-            <div class="row">
-                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
-                <div class="col m6 s12 center-align">
-                    <a href="#/private/effective/{{user.effectiveDefault}}" class="btn red lighteen-1 white-text">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
-                    <a href="" ng-click="writeEffective()" class="btn green darken-1 white-text">{{'commons.buttons.validate' | translate }}</a>&nbsp;
-                </div>
-                <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+            <div class="col s12 center-align">
+                <a href="" class="btn red lighteen-1 white-text waves-effect waves-light center" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
+                <button class="btn green darken-1 waves-effect waves-light center" type="submit" ng-disabled="effectiveCaracterSection.$invalid" translate="commons.buttons.validate"></button>
             </div>
         </form>
     </div>
