Nb player + nb Team

--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -51,8 +51,8 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs" tabs>
-                <li class="tab col s6 "><a href="#playerList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabMembers' | translate }}</a></li>
-                <li class="tab col s6 "><a href="#teamList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabTeams' | translate }}</a></li>
+                <li class="tab col s6 "><a href="#playerList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabMembers' | translate }} ({{players.length}})</a></li>
+                <li class="tab col s6 "><a href="#teamList" class="red-text text-lighten-1">{{'effectiveLabels.effectiveTabTeams' | translate }} ({{listTeamHome.length}})</a></li>
             </ul>
         </div>
 
