--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -14,7 +14,7 @@
                 <div class="divider"></div>
             </li>
         </ul>
-        <div class="col m3 s12 center-align" ng-if="effectives.length > 1">
+        <div class="col m3 s12 center-align" ng-show="effectives.length > 1">
             <br>
             <a class="dropdown-button waves-effect waves-light grey-text grey lighten-4 btn" style="font-size: small;" href="#!" data-activates="mainEffectiveList">
                 {{'mainEffective.buttons.dropdownEffective' | translate }} &nbsp;&nbsp;&nbsp;&nbsp;
