--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -1,6 +1,6 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"> <div class="col s10"></div></div>   
+    <div class="row"></div>   
 
     <!-- action bar -->
     <!-- <div class="row">
