--- a/src/app/modules/sandbox/effective/team/writeTeam.html
+++ b/src/app/modules/sandbox/effective/team/writeTeam.html
@@ -1,54 +1,68 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"> <div class="col s10"></div></div>   
-
-    <!-- action bar -->
+    <div class="row"></div>
+    
+    <!-- Entete -->
     <div class="row">
-        <div ng-hide="addTeamTitle">
-            <div class="col s2">    
-                <i class="fa fa-pencil-square-o fa-3x red-text text-lighten-1"></i>
-            </div>
-            <div class="col s10">
-                <h5 class="light-green-text text-lighten-1">{{'updateTeam.title' | translate }}</h5>
-            </div>
-        </div>
-        <div ng-show="addTeamTitle">
-            <div class="col s2">    
-                <i class="fa fa-plus-square-o fa-3x red-text text-lighten-1"></i>
-            </div>
-            <div class="col s10">
-                <h5 class="light-green-text text-lighten-1">{{'addTeam.title' | translate }}</h5>
+        <div class="col s12">
+            <div class="row blue-grey darken-2 white-text center-align">
+                <div ng-hide="addTeamTitle">
+                    <div class="col s1">    
+                        <h5><i class="fa fa-pencil-square-o"></i></h5>
+                    </div>
+                    <div class="col s11" ng-hide="{{adversary}}">
+                        <h5>{{'updateTeam.titleHome' | translate }} {{team.label}}</h5>
+                    </div>
+                    <div class="col s11" ng-show="{{adversary}}">
+                        <h5>{{'updateTeam.titleAdversary' | translate }} {{team.label}}</h5>
+                    </div>
+                </div>
+                <div ng-show="addTeamTitle">
+                    <div class="col s1">    
+                        <h5><i class="fa fa-plus-square-o"></i></h5>
+                    </div>
+                    <div class="col s11" ng-hide="{{adversary}}">
+                        <h5>{{'addTeam.titleHome' | translate }} {{currentEffective.label}}</h5>
+                    </div>
+                    <div class="col s11" ng-show="{{adversary}}">
+                        <h5>{{'addTeam.titleAdversary' | translate }} {{currentEffective.label}}</h5>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     
     <!-- form-->
     <div class="row">
-        <form class="col s12" ng-submit="writeTeam()" name="teamForm">
+        <form ng-submit="writeTeam()" name="teamForm">
             <div class="card-panel">
                 <!-- Team home -->
-                <div class="row center">
-                    <div class="col s12">
+                <div class="row">
                         <!-- input field -->
-                        <div class="input-field col m6 s12">
-                            <input id="teamLabel" type="text" ng-model="team.label" class="validate left-align" required>
+                        <div class="input-field col s2">
                             <label for="teamLabel">{{'teamLabels.label' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
-                        
-                        <div class="input-field col m6 s12">
-                            <label >{{'teamLabels.activation' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                            <input class="with-gap" name="activation" type="radio" ng-model="team.enable" id="teamStatusT" value="true" required/>
-                            <label for="teamStatusT">{{'teamLabels.enable' | translate }}</label>
-                            <input class="with-gap" name="activation" type="radio" ng-model="team.enable" id="teamStatusF" value="false" required/>
-                            <label for="teamStatusF">{{'teamLabels.disable' | translate }}</label>
-                            
+                        <div class="input-field col s10">
+                            <input name="teamLabel" id="teamLabel" type="text" ng-model="team.label" class="validate left-align" 
+                                   required
+                                   ng-class="{ 'has-error' : teamForm.teamLabel.$invalid && !teamForm.teamLabel.$pristine }">
+                        <span class="small red-text text-lighten-1"
+                                    ng-show="teamForm.teamLabel.$invalid && !teamForm.teamLabel.$pristine" translate="teamErrors.label"></span>
                         </div>
                         
-                    </div>
+                        <div class="input-field col s2">
+                            <label >{{'teamLabels.activation' | translate }} <span class="red-text text-lighten-1">*</span></label>
+                        </div>
+                        <div class="input-field col s10">
+                            <input class="with-gap" name="activation" type="radio" ng-model="team.enable" id="teamStatusT" ng-value="true" required/>
+                            <label for="teamStatusT">{{'teamLabels.enable' | translate }}</label>
+                            <input class="with-gap" name="activation" type="radio" ng-model="team.enable" id="teamStatusF" ng-value="false" required/>
+                            <label for="teamStatusF">{{'teamLabels.disable' | translate }}</label>
+                        </div>  
                 </div>
             </div>
             
-            <div class="card-panel" ng-if="addTeamTitle===false">
+            <div class="card-panel" ng-if="adversary==='false'">
                 <div class="row">
                     <!-- List team adversary -->
                     <div class="col s11 grey lighten-4 blue-grey-text text-darken-2">
@@ -59,8 +73,6 @@
                             <h5><i class="fa fa-plus-square-o"></i></h5>
                         </a>
                     </div>
-
-
 
                     <div class="col s12 center-align">  
                         <table>
@@ -94,7 +106,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <a class="btn red lighteen-1 white-text waves-effect waves-light center" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
-                    <button class="btn green darken-1 waves-effect waves-light center" type="submit" name="action" translate="commons.buttons.validate">
+                    <button class="btn green darken-1 waves-effect waves-light center" type="submit" ng-disabled="teamForm.$invalid" translate="commons.buttons.validate">
                         <i class="mdi-content-send right"></i>
                     </button>
                 </div>
