--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -25,154 +25,8 @@
                     </h5>
                 </div>
                 
-                <div class="col s12 hide-on-med-and-down grey lighten-2">
-                    <!-- Filter Zone start-->
-                        <div class="col s12 center">&nbsp;</div>
-                        <div class="col s1 center">&nbsp;</div>
-
-                        <!-- Periodicity selector -->
-                        <div class="col s1 center red lighten-1" style="margin:1px">
-                            <a href="" ng-click="getCurrentMonth()" class="white-text"><h6>{{'stats.periodicity.month' | translate }}</h6></a>
-                        </div>
-
-                        <div class="col s1 center red lighten-1" style="margin:1px">
-                            <a href="" ng-click="getCurrentQuarter()" class="white-text"><h6>{{'stats.periodicity.quarter' | translate }}</h6></a>
-                        </div>
-                        <div class="col s1 center red lighten-1" style="margin:1px">
-                            <a href="" ng-click="getCurrentSeason()" class="white-text"><h6>{{'stats.periodicity.season' | translate }}</h6></a>
-                        </div>
-
-
-                        <!-- Month Navigation--> 
-                        <div class="col s1 center" ng-if="periodicity=='month'">&nbsp;</div>
-                        <div class="col s1 center" ng-if="periodicity=='month'">
-                            <a href="" ng-click="previousMonth()" class="btn-floating blue-grey darken-2 white-text left">
-                                <i class="mdi-navigation-chevron-left"></i>
-                            </a>
-                        </div>
-                        <div class="col s4 center" ng-if="periodicity=='month'">
-                            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                        </div>
-                        <div class="col s1 center" ng-if="periodicity=='month'">
-                            <a href="" ng-click="nextMonth()" class="btn-floating blue-grey darken-2 white-text right">
-                                <i class="mdi-navigation-chevron-right"></i>
-                            </a>
-                        </div>
-
-
-                        <!-- Quarter Navigation-->
-                        <div class="col s1 center" ng-if="periodicity=='quarter'">&nbsp;</div>
-                        <div class="col s1 center" ng-if="periodicity=='quarter'">
-                            <a href="" ng-click="previousQuarter()" class="btn-floating blue-grey darken-2 white-text left">
-                                <i class="mdi-navigation-chevron-left"></i>
-                            </a>
-                        </div>
-                        <div class="col s4 center" ng-if="periodicity=='quarter'">
-                            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                        </div>
-                        <div class="col s1 center" ng-if="periodicity=='quarter'">
-                            <a href="" ng-click="nextQuarter()" class="btn-floating blue-grey darken-2 white-text right">
-                                <i class="mdi-navigation-chevron-right"></i>
-                            </a>
-                        </div>
-
-
-                        <!-- Season Navigation-->
-                        <div class="col s1 center" ng-if="periodicity=='season'">&nbsp;</div>
-                        <div class="col s1 center" ng-if="periodicity=='season'">
-                            <a href="" ng-click="previousSeason()" class="btn-floating blue-grey darken-2 white-text left">
-                                <i class="mdi-navigation-chevron-left"></i>
-                            </a>
-                        </div>
-                        <div class="col s4 center" ng-if="periodicity=='season'">
-                            <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                        </div>
-                        <div class="col s1 center" ng-if="periodicity=='season'">
-                            <a href="" ng-click="nextSeason()" class="btn-floating blue-grey darken-2 white-text right">
-                                <i class="mdi-navigation-chevron-right"></i>
-                            </a>
-                        </div>
-                        
-                        <div class="col s1 center">&nbsp;</div>
-                        
-                    </div>
+                <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
             </div>
-            
-            <!-- view for tablet and phone -->
-            <div class="row hide-on-large-only grey lighten-2">
-
-                <!-- Periodicity selector -->
-                <div class="col s1 center">&nbsp;</div>
-                <div class="col s3 center red lighten-1" style="margin:1px">
-                    <a href="" ng-click="getCurrentMonth()" class="white-text"><h6 class="small">{{'stats.periodicity.month' | translate }}</h6></a>
-                </div>
-
-                <div class="col s4 center red lighten-1" style="margin:1px">
-                    <a href="" ng-click="getCurrentQuarter()" class="white-text"><h6 class="small">{{'stats.periodicity.quarter' | translate }}</h6></a>
-                </div>
-                <div class="col s3 center red lighten-1" style="margin:1px">
-                    <a href="" ng-click="getCurrentSeason()" class="white-text"><h6 class="small">{{'stats.periodicity.season' | translate }}</h6></a>
-                </div>
-                <div class="col s1 center">&nbsp;</div>
-            </div>
-
-            <!-- Month Navigation-->
-            <div class="row hide-on-large-only grey lighten-2" ng-if="periodicity=='month'">   
-                <div class="col s1 center">&nbsp;</div>
-                <div class="col s1 center" ng-if="periodicity=='month'">
-                    <a href="" ng-click="previousMonth()" class="btn-floating blue-grey darken-2 white-text left">
-                        <i class="mdi-navigation-chevron-left"></i>
-                    </a>
-                </div>
-                <div class="col s8 center">
-                    <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                </div>
-                <div class="col s1 center" ng-if="periodicity=='month'">
-                    <a href="" ng-click="nextMonth()" class="btn-floating blue-grey darken-2 white-text right">
-                        <i class="mdi-navigation-chevron-right"></i>
-                    </a>
-                </div>
-                <div class="col s1 center">&nbsp;</div>
-            </div>
-
-            <!-- Quarter Navigation-->
-            <div class="row hide-on-large-only grey lighten-2" ng-if="periodicity=='quarter'">
-                <div class="col s1 center">&nbsp;</div>
-                <div class="col s1 center" ng-if="periodicity=='quarter'">
-                    <a href="" ng-click="previousQuarter()" class="btn-floating blue-grey darken-2 white-text left">
-                        <i class="mdi-navigation-chevron-left"></i>
-                    </a>
-                </div>
-                <div class="col s8 center">
-                    <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                </div>
-                <div class="col s1 center" ng-if="periodicity=='quarter'">
-                    <a href="" ng-click="nextQuarter()" class="btn-floating blue-grey darken-2 white-text right">
-                        <i class="mdi-navigation-chevron-right"></i>
-                    </a>
-                </div>
-                <div class="col s1 center">&nbsp;</div>
-            </div>
-
-            <!-- Season Navigation-->
-            <div class="row hide-on-large-only grey lighten-2" ng-if="periodicity=='season'">
-                <div class="col s1 center">&nbsp;</div>
-                <div class="col s1 enter">
-                    <a href="" ng-click="previousSeason()" class="btn-floating blue-grey darken-2 white-text left">
-                        <i class="mdi-navigation-chevron-left"></i>
-                    </a>
-                </div>
-                <div class="col s8 center" ng-if="periodicity=='season'">
-                    <h6 class="blue-grey-text text-lighten-1">{{periodicityActive.label}}</h6>
-                </div>
-                <div class="col s1 center" ng-if="periodicity=='season'">
-                    <a href="" ng-click="nextSeason()" class="btn-floating blue-grey darken-2 white-text right">
-                        <i class="mdi-navigation-chevron-right"></i>
-                    </a>
-                </div>
-                <div class="col s1 center">&nbsp;</div>
-            </div>
-            <!-- view for tablet and phone -->
 
             <!-- Stats goals/sanction/use start -->
             <div class="row">
