--- a/src/app/components/directives/stats/hand/efficiency.html
+++ b/src/app/components/directives/stats/hand/efficiency.html
@@ -1,5 +1,5 @@
 <!-- efficiency gauge -->
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiencyGlobal'">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiencyGlobal'" ng-show="noStat">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency9m'" ng-show="noStat">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency6m'" ng-show="noStat">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
@@ -53,7 +53,7 @@
     </div>
 </div>
 
-<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'">
+<div class="card blue-grey darken-2" ng-if="bindToId==='gaugeEfficiency7m'" ng-show="noStat">
     <div class="card-title blue-grey darken-2  grey-text text-lighten-4 center">
         <h5><small>{{title | translate }} ({{nbGoal}}/{{nbShoot}})</small></h5>
     </div>
