--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -11,9 +11,10 @@
             <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.frequence' | translate }}</h6></div>
-            <div class="col s4 light-green darken-2 white-text "><h6>{{nbGoal}}</h6></div>
-            <div class="col s4 light-green darken-1 white-text "><h6>{{goalAvg | number : 2}}</h6></div>
-            <div class="col s4 light-green darken-2 white-text "><h6>{{totalPlayTime/60/nbGoal | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
+            <div class="col s4 light-green darken-2 white-text" ng-show="noStat"><h6>{{nbGoal}}</h6></div>
+            <div class="col s4 light-green darken-1 white-text" ng-show="noStat"><h6>{{goalAvg | number : 2}}</h6></div>
+            <div class="col s4 light-green darken-2 white-text" ng-show="noStat"><h6>{{totalPlayTime/60/nbGoal | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
+            <div class="col s12 light-green darken-2 white-text" ng-hide="noStat"><h6>{{'stats.resumeTab.noData' | translate }}</h6></div>
         </div>
     </div>
 </div>
@@ -31,9 +32,10 @@
             <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.frequence' | translate }}</h6></div>
-            <div class="col s4 red darken-2 white-text "><h6>{{nbGoal}}</h6></div>
-            <div class="col s4 red lighten-2 white-text "><h6>{{goalAvg | number : 2}}</h6></div>
-            <div class="col s4 red darken-2 white-text "><h6>{{totalPlayTime/60/nbGoal | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
+            <div class="col s4 red darken-2 white-text" ng-show="noStat"><h6>{{nbGoal}}</h6></div>
+            <div class="col s4 red lighten-2 white-text" ng-show="noStat"><h6>{{goalAvg | number : 2}}</h6></div>
+            <div class="col s4 red darken-2 white-text" ng-show="noStat"><h6>{{totalPlayTime/60/nbGoal | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
+            <div class="col s12 red darken-2 white-text" ng-hide="noStat"><h6>{{'stats.resumeTab.noData' | translate }}</h6></div>
         </div>
     </div>
 </div>
