--- a/src/app/components/directives/stats/hand/sanction.html
+++ b/src/app/components/directives/stats/hand/sanction.html
@@ -12,9 +12,10 @@
             <div class="col s4"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.sanction.redCard' | translate }}</h6></div>
-            <div class="col s4 amber accent-3"><h6>{{nbYellowCard}}</h6></div>
-            <div class="col s4 red lighten-2"><h6>{{nbExclTmp}}</h6></div>
-            <div class="col s4 red darken-3 white-text"><h6>{{nbRedCard}}</h6></div>
+            <div class="col s4 amber accent-3" ng-show="noStat"><h6>{{nbYellowCard}}</h6></div>
+            <div class="col s4 red lighten-2" ng-show="noStat"><h6>{{nbExclTmp}}</h6></div>
+            <div class="col s4 red darken-3 white-text" ng-show="noStat"><h6>{{nbRedCard}}</h6></div>
+            <div class="col s12 red lighten-2 white-text" ng-hide="noStat"><h6>{{'stats.resumeTab.noData' | translate }}</h6></div>
         </div>
     </div>
 </div>        
