--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -98,53 +98,7 @@
                     <div><h5 class="center white red-text text-lighten-2"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
                     <ul>
                         <li class="col s12 m6 l4" ng-repeat="collecte in collectes">
-                            <!-- cup -->
-                            <div class="card" ng-if="collecte.eventRef.link.type=='cup'">
-                                <div class="red lighten-2 white-text">
-                                    <h5 class="card-content center red lighten-1">
-                                        <span class="left"><i class="material-icons">album</i></span>
-                                        <span>{{'mainAgenda.eventType.cup' | translate }}</span>
-                                        <span class="right">
-                                            <a href="#/private/eventStats/{{collecte._id}}" class="white-text"><i class="fa fa-bar-chart"></i></a>
-                                        </span>
-                                    </h5>
-
-                                    <h6 class="card-content">{{collecte.eventRef.participants.teamHome.label}} <br/> {{collecte.eventRef.participants.teamVisitor.label}}</h6>
-                                    <h6 class="card-content">{{collecte.eventRef.startDate}}</h6>
-                                </div>
-                            </div>
-
-                            <!-- friendlyGame -->
-                            <div class="card" ng-if="collecte.eventRef.link.type=='friendlyGame'">
-                                <div class="light-green lighten-2 white-text">
-                                    <h5 class="card-content center light-green lighten-1">
-                                        <span class="left"><i  class="material-icons">flare</i></span>
-                                        <span>{{'mainAgenda.eventType.friendlyGame' | translate }}</span>
-                                        <span class="right">
-                                            <a href="#/private/eventStats/{{collecte._id}}" class="white-text"><i class="fa fa-bar-chart"></i></a>
-                                        </span>
-                                    </h5>
-
-                                    <h6 class="card-content">{{collecte.eventRef.participants.teamHome.label}} <br/> {{collecte.eventRef.participants.teamVisitor.label}}</h6>
-                                    <h6 class="card-content">{{collecte.eventRef.startDate}}</h6>
-                                </div>                    
-                            </div>
-
-                            <!-- championship -->
-                            <div class="card" ng-if="collecte.eventRef.link.type=='championship'">
-                                <div class="white blue-grey-text text-darken-2">
-                                    <h5 class="card-content center blue-grey lighten-1 white-text">
-                                        <span class="left"><i  class="material-icons">stars</i></span>
-                                        <span>{{'mainAgenda.eventType.championship' | translate }}</span>
-                                        <span class="right">
-                                            <a href="#/private/eventStats/{{collecte._id}}" class="white-text"><i class="fa fa-bar-chart"></i></a>
-                                        </span>
-                                    </h5>
-
-                                    <h6 class="card-content">{{collecte.eventRef.participants.teamHome.label}} <br/> {{collecte.eventRef.participants.teamVisitor.label}}</h6>
-                                    <h6 class="card-content blue-grey-text text-darken-2">{{collecte.eventRef.startDate}}</h6>
-                                </div>                    
-                            </div>
+                            <event-card event="collecte.eventRef"></event-card>
                         </li>
                     </ul>
                 </div>
